added correct languages

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -10,10 +10,10 @@
 <body>
     <header>
         
-        {% if page.lang == "def" %}
-            <h1 class="sitetitle">Website</h1>
-        {% elsif page.lang == "lang-2" %}
-            <h1 class="sitetitle">Website lang-2</h1>
+        {% if page.lang == "is" %}
+            <h1 class="sitetitle">Whippet ræktun íslands</h1>
+        {% elsif page.lang == "en" %}
+            <h1 class="sitetitle">Whippet breeding iceland</h1>
         {% endif %}
         
         <div class="nav">
@@ -26,7 +26,7 @@
     </div>
 
     <footer>
-        
+        made by me @ 2022
     </footer>
 </body>
 </html>
