--- a/_includes/navigation.html
+++ b/_includes/navigation.html
@@ -1,21 +1,21 @@
 
 <nav class="headernav"><!--This is still set with en as default language and is as secondary language-->
-    {% if page.lang == "def" %}
+    {% if page.lang == "is" %}
       {% for item in site.data.nav %}
         <a href="{{ site.baseurl }}{{ item.link }}" {% if page.url == item.link %}class="current"{%else%}class="navlink"{% endif %}>{{ item.name }}</a>
       {% endfor %}
-    {% elsif page.lang == "lang-2" %}
-      {% for item in site.data.nav-lang2 %}
+    {% elsif page.lang == "en" %}
+      {% for item in site.data.nav-en %}
         <a href="{{ site.baseurl }}{{ item.link }}" {% if page.url == item.link %}class="current"{%else%}class="navlink"{% endif %}>{{ item.name }}</a>
       {% endfor %}
     {% else %}
       <p>lang is wrong</p>
     {% endif %}
-    {% if page.lang == "def" %}
+    {% if page.lang == "is" %}
       <!--<a href="/is{{ page.url }}">IS</a>-->
-      <a href="{{ site.baseurl }}/lang-2">lang-2</a>
-    {% elsif page.lang == "lang-2" %}
+      <a href="{{ site.baseurl }}/en">en</a>
+    {% elsif page.lang == "en" %}
       <!--<a href="/">EN</a>-->
-      <a href="{{ site.baseurl }}/">def</a>
+      <a href="{{ site.baseurl }}/">is</a>
     {% endif %}
   </nav>
